<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".eventbus.EventBusActivity">

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/btn_unregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAllCaps="false"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/unregister" />

    <TextView
        android:id="@+id/tv_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/send_message_with_eventbus" />

    <TextView
        android:id="@+id/tv_send_in_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/send_message_in_a_new_thread" />

    <TextView
        android:id="@+id/tv_send_in_new_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/send_message_in_another_activity" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:hint="@string/no_message"
        />

</LinearLayout>